# rssched-solver

./: '  .gitignore  Cargo.toml  Dockerfile  README.md  endpunkte.csv  fahrzeuggruppen.csv  kundenfahrten.csv  performance_notes.md  readme.md  wartungsfenster.csv
.github/workflows/: docker-ci.yml  docker-publish.yml  rust-ci.yml
heuristic_framework/: Cargo.toml
heuristic_framework/src/: lib.rs
instances/: kelheim-v3.0-25pct.scheduler_request_without_depots.json
internal/: Cargo.toml
internal/src/: lib.rs  main.rs  test_objective.rs
model/: Cargo.toml
model/resources/: small_test_input.json  small_test_input_with_null_values.json  small_test_input_without_maintenance.json
model/src/: base_types.rs  config.rs  depots.rs  json_serialisation.rs  json_serialisation_tests.rs  lib.rs  locations.rs  network.rs  time.rs  utilities.rs  vehicle_types.rs  vehicles.rs
model/src/base_types/: distance.rs  location.rs  time.rs
model/src/base_types/time/: date_time.rs  duration.rs
model/src/json_serialisation/: mod.rs  tests.rs
model/src/network/: demand.rs  depot.rs  nodes.rs
objective_framework/: Cargo.toml
objective_framework/src/: base_value.rs  coefficient.rs  evaluated_solution.rs  indicator.rs  level.rs  lib.rs  objective.rs  objective_value.rs  tests.rs
python_visualization/rolling_stock_scheduling/: cli.py
resources/json_input/: small_test_input.json  test_instance.json
server/: Cargo.toml
server/src/: first_phase_objective.rs  lib.rs  main.rs
solution/: Cargo.toml
solution/benches/: schedule_modification_benchmarks.rs
solution/resources/: test_instance.json
solution/src/: json_serialisation.rs  lib.rs  objective.rs  path.rs  schedule.rs  segment.rs  simple_objective.rs  test_utilities.rs  tour.rs  tour_tests.rs  train_formation.rs  transition.rs  vehicle.rs
solution/src/schedule/: modifications.rs  neighborhood.rs  objective.rs  path.rs  tests.rs  tour.rs  tour_tests.rs  tours_old.rs  train_formation.rs  vehicle.rs
solution/src/schedule/neighborhood/: mod.rs  swap_factory.rs  swaps.rs
solution/src/tour/: modifications.rs  tests.rs
solution/src/transition/: modifications.rs  transition_cycle.rs
solver/: Cargo.toml
solver/src/: first_phase_objective.rs  greedy.rs  lib.rs  local_search.rs  main.rs  max_matching_solver.rs  min_cost_flow_solver.rs  min_cost_max_matching_solver.rs  objective.rs  one_node_per_tour.rs  schedule.rs  simple_objective.rs  solver.rs  test_objective.rs  vehicles.rs
solver/src/local_search/: local_improver.rs  mod.rs  objective.rs  swap_factory.rs  swaps.rs
solver/src/local_search/neighborhood/: mod.rs  swaps.rs
solver/src/local_search/neighborhood/swaps/: add_trip_for_hitch_hiking.rs  path_exchange.rs  remove_single_node.rs  spawn_vehicle_for_maintenance.rs
solver/src/schedule/: path.rs  tour.rs  train_formation.rs
solver/src/solver/: greedy.rs  greedy_1.rs  greedy_2.rs  greedy_3.rs  local_search.rs  one_node_per_tour.rs
solver/src/solver/local_search/: local_improver.rs  swap_factory.rs  swaps.rs
solver/src/transition_cycle_tsp/: mod.rs  transition_cycle_neighborhood.rs  transition_cycle_objective.rs
solver/src/transition_local_search/: mod.rs  transition_neighborhood.rs  transition_objective.rs
solver_framework/: Cargo.toml
solver_framework/src/: lib.rs  local_search.rs
src/: base_types.rs  config.rs  distance.rs  json_serialisation.rs  lib.rs  location.rs  locations.rs  main.rs  modifications.rs  network.rs  objective.rs  placeholder.rs  schedule.rs  solver.rs  time.rs  train_formation.rs  unit.rs  units.rs  utilities.rs  vehicle.rs
src/network/: demand.rs  nodes.rs
src/python/rolling-stock-scheduling/: README.md  pyproject.toml
src/python/rolling-stock-scheduling/rolling_stock_scheduling/data/: access.py
src/python/rolling-stock-scheduling/rolling_stock_scheduling/io/: reader.py
src/python/rolling-stock-scheduling/rolling_stock_scheduling/model/: response.py
src/python/rolling-stock-scheduling/rolling_stock_scheduling/visualization/: gantt.py
src/python/rolling-stock-scheduling/tests/visualization/: test_gantt.py
src/schedule/: objective.rs  path.rs  tour.rs  train_formation.rs
src/solver/: greedy_1.rs  greedy_2.rs  greedy_3.rs  local_search.rs
test_instances/: config.yaml
test_instances/21-06-tage-1/: endpunkte.csv  leistungsketten.csv  leistungsverknuepfungen.csv  relationen.csv
test_instances/21-06-tage-2/: kundenfahrten.csv  leistungsketten.csv  wartungsfenster.csv
test_instances/21-06-tage-7/: data.json  kundenfahrten.csv  leistungsverknuepfungen.csv  wartungsfenster.csv
test_instances/21-09-tage-14/: fahrzeuggruppen.csv  kundenfahrten.csv  leistungsketten.csv  relationen.csv  wartungsfenster.csv
test_instances/21-09-tage-21/: data.json  endpunkte.csv  fahrzeuggruppen.csv
test_instances/21-09-tage-28/: data.json  kundenfahrten.csv  leistungsketten.csv
test_instances/21-09-tage-7/: data.json  fahrzeuggruppen.csv  leistungsketten.csv  leistungsverknuepfungen.csv  relationen.csv  wartungsfenster.csv
test_instances/21-10-tage-1/: data.json  fahrzeuggruppen.csv  leistungsverknuepfungen.csv  wartungsfenster.csv
test_instances/21-10-tage-2/: SBB_leistungsketten.csv  data.json  relationen.csv
test_instances/21-10-tage-7/: SBB_leistungsketten.csv  data.json  endpunkte.csv  fahrzeuggruppen.csv  leistungsketten.csv  leistungsverknuepfungen.csv  relationen.csv  wartungsfenster.csv
test_instances/small_test/: endpunkte.csv  fahrzeuggruppen.csv  kundenfahrten.csv  wartungsfenster.csv
test_instances/tage-4-0NW-bathtub/: fahrzeuggruppen.csv  wartungsfenster.csv
test_instances/tage-4-3NW-time-bathtub/: fahrzeuggruppen.csv
test_instances/tage-4-7NW-equal-time-bathtub/: fahrzeuggruppen.csv
test_instances/tage-4-7NW-time-und-all-high-km-bathtub/: endpunkte.csv  fahrzeuggruppen.csv
test_instances/tage-4-7NW-time-und-all-higher-km-bathtub/: config.yaml  fahrzeuggruppen.csv
test_instances/tage-4-7NW-time-und-km-bathtub/: fahrzeuggruppen.csv
test_instances/tage-7-13units-bath1218/: endpunkte.csv  (+2 more)
test_json/: test_instance.json
time/: Cargo.toml
(+72 files in other folders)
