[workspace]
members = [
    "time",
    "objective_framework",
    "heuristic_framework",
    "model",
    "solution",
    "solver",
    "server",
    "internal"
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Leon Sering <sering@math.ethz.ch"]
description = "Solving the rolling-stock scheduling with a local search approach."
