[package]
name = "internal"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "internal"
path = "src/lib.rs"

[[bin]]
name = "single_run"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { path = "../time" }
model = { path = "../model" }
solution = { path = "../solution" }
objective_framework = { path = "../objective_framework" }
solver = { path = "../solver" }
server = { path = "../server" }
rayon = "1.5.1" # for parallel iterator
serde_json = { version = "1.0", features = ["preserve_order"]} # for reading json-files
