[package]
name = "sbb_model"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
itertools = "0.10"
csv = "1.1"
yaml-rust = "0.4" # for reading config.yaml
serde = { version = "1.0", features = ["derive"] } # for reading json-files
serde_json = "1.0" # for reading json-files

