[package]
name = "model"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] } # for reading json-files
serde_json = { version = "1.0", features = ["preserve_order"]} # for reading json-files
derive_more = { version = "0.99.16", default-featuress = false, features = ["display"]} # for deriving more traits
time = { path = "../time" }

