[package]
name = "objective_framework"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "objective_framework"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { path = "../time" }
serde_json = { version = "1.0", features = ["preserve_order"]} # for reading json-files
