[package]
name = "server"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
solution = { path = "../solution" }
objective_framework = { path = "../objective_framework" }
solver = { path = "../solver" }
serde_json = { version = "1.0", features = ["preserve_order"]} # for reading json-files
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"]} # web framework
