[package]
name = "solution"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "solution"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { path = "../time" }
model = { path = "../model" }
solver_framework = { path = "../solver_framework" }
im = "15.0.0" # for lazy copies of data structures
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] } # for reading json-files
serde_json = { version = "1.0", features = ["preserve_order"]} # for reading json-files
