[package]
name = "solution"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "solution"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
rapid_time = { version = "0.1.2"} # for datetime and duration
rapid_solve = { version = "0.1.4"} # for hierarical_objective and local_search_solver
im = "15.0.0" # for lazy copies of data structures
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] } # for reading json-files
serde_json = { version = "1.0", features = ["preserve_order"]} # for reading json-files

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "schedule_modification_benchmarks"
harness = false
