[package]
name = "sbb_solver"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "sbb_solver"
path = "src/lib.rs"

[[bin]]
name = "sbb_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { path = "../time" }
sbb_model = { path = "../model" }
sbb_solution = { path = "../solution" }
objective_framework = { path = "../objective_framework" }
rayon = "1.5.1" # for parallel iterator
