[package]
name = "solver"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "solver"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
solution = { path = "../solution" }
rayon = "1.5.1" # for parallel iterator
serde_json = { version = "1.0", features = ["preserve_order"]} # for reading json-files
itertools = "0.12.0"
rs-graph = "0.21"
rapid_time = { version = "0.1.2"} # for datetime and duration
rapid_solve = { version = "0.1.4"} # for hierarical_objective and local_search_solver
im = "15.0.0" # for lazy copies of data structures
