[package]
name = "solver_framework"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "solver_framework"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objective_framework = { path = "../objective_framework" }
rayon = "1.5.1" # for parallel iterator
itertools = "0.12.0"
